--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body class="bg-blue-900 h-screen">
-    <div class="container mx-auto h-full flex justify-center items-center">
-        <div class="bg-white w-1/3">
-            <h1 class="mb-6 text-center">Hi !</h1>
+    <div class="container mx-auto  h-ful w-full flex flex-col justify-center">
+        <div class="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2 h-64 flex">
+            <div class="flex-auto pt-12">
+                <p class="break-normal text-4xl">
+                    Hi, I'm Fuk Kwang <br/>
+                    I'm a full-stack web developer
+                </p>
+            </div>
+            <div class="flex-auto bg-contain bg-center bg-no-repeat" style="background-image: url(asset/marius-ciocirlan-vMV6r4VRhJ8-unsplash.jpg)">
+            </div>
+        </div>
+        <div class="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2 h-64">
+            <h1>Accomplishment</h1>
+        </div>
+        <div class="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2 h-64">
+            <h1>Contact Me</h1>
         </div>
     </div>
 </body>
